<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>no.mnemonic.services.grafeo</groupId>
  <artifactId>grafeo-parent</artifactId>
  <packaging>pom</packaging>
  <version>0.1.13-SNAPSHOT</version>

  <name>grafeo</name>
  <description>Open platform for modelling, collection and exchange of knowledge</description>
  <url>https://github.com/mnemonic-no/grafeo</url>
  <inceptionYear>2017</inceptionYear>

  <licenses>
    <license>
      <name>ISC</name>
      <url>https://opensource.org/licenses/ISC</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <organization>
    <name>mnemonic as</name>
    <url>https://www.mnemonic.no</url>
  </organization>

  <developers>
    <developer>
      <name>mnemonic development team</name>
      <email>opensource@mnemonic.no</email>
      <url>https://github.com/mnemonic-no</url>
      <organization>mnemonic as</organization>
      <organizationUrl>https://www.mnemonic.no</organizationUrl>
      <timezone>Europe/Oslo</timezone>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- JDK compile target -->
    <jdk.version>17</jdk.version>

    <!-- mnemonic dependencies -->
    <mnemonic.commons.version>0.4.25</mnemonic.commons.version>
    <mnemonic.messaging.version>1.3.35</mnemonic.messaging.version>
    <mnemonic.services.common.version>0.3.53</mnemonic.services.common.version>
    <mnemonic.services.triggers.version>0.0.18</mnemonic.services.triggers.version>

    <!-- external dependencies -->
    <activemq.version>5.18.2</activemq.version>
    <cassandra.version>4.17.0</cassandra.version>
    <disruptor.version>3.4.4</disruptor.version>
    <elastic.search.version>7.17.13</elastic.search.version>
    <guava.version>32.1.2-jre</guava.version>
    <guice.version>5.1.0</guice.version>
    <hazelcast.version>3.12.13</hazelcast.version>
    <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
    <jackson.version>2.15.2</jackson.version>
    <jakarta.el.version>3.0.4</jakarta.el.version>
    <jakarta.inject.version>1.0.5</jakarta.inject.version>
    <jakarta.validation.version>2.0.2</jakarta.validation.version>
    <jakarta.ws.rs.version>2.1.6</jakarta.ws.rs.version>
    <jetty.version>10.0.16</jetty.version>
    <junit.version>4.13.2</junit.version>
    <junit.jupiter.version>5.10.0</junit.jupiter.version>
    <log4j.version>2.20.0</log4j.version>
    <mockito.version>5.5.0</mockito.version>
    <picocli.version>4.7.5</picocli.version>
    <resteasy.version>5.0.8.Final</resteasy.version>
    <slf4j.version>2.0.9</slf4j.version>
    <swagger.version>1.6.11</swagger.version>
    <tinkerpop.version>3.7.0</tinkerpop.version>

    <!-- force upgrade for transitive dependencies -->
    <commons.codec.version>1.16.0</commons.codec.version>
    <httpclient.version>4.5.14</httpclient.version>

    <!-- build dependencies -->
    <maven.assembly.version>3.3.0</maven.assembly.version>
    <maven.clean.version>3.1.0</maven.clean.version>
    <maven.compiler.version>3.11.0</maven.compiler.version>
    <maven.deploy.version>2.8.2</maven.deploy.version>
    <maven.enforcer.version>1.4.1</maven.enforcer.version>
    <maven.install.version>2.5.2</maven.install.version>
    <maven.jar.version>3.2.0</maven.jar.version>
    <maven.javadoc.version>3.5.0</maven.javadoc.version>
    <maven.license.version>1.20</maven.license.version>
    <maven.really.executable.jar.version>1.5.0</maven.really.executable.jar.version>
    <maven.release.version>2.5.3</maven.release.version>
    <maven.resources.version>3.2.0</maven.resources.version>
    <maven.shade.version>3.2.4</maven.shade.version>
    <maven.source.version>3.2.1</maven.source.version>
    <maven.surefire.version>2.22.2</maven.surefire.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Force version of slf4j-api to avoid incompatibilities with Log4j. Note that slf4j-api is backward compatible,
           see https://www.slf4j.org/faq.html#compatibility. -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>api</module>
    <module>auth</module>
    <module>dao</module>
    <module>rest</module>
    <module>service</module>
    <module>seb-model</module>
    <module>seb-producer</module>
    <module>seb-esengine</module>
    <module>utilities</module>
    <module>integration-test</module>
    <module>deployment-combined</module>
    <module>deployment-rest</module>
    <module>deployment-service</module>
    <module>cli-tools</module>
  </modules>

  <scm>
    <connection>scm:git:git://github.com/mnemonic-no/grafeo.git</connection>
    <developerConnection>scm:git:ssh://github.com:mnemonic-no/grafeo.git</developerConnection>
    <url>https://github.com/mnemonic-no/grafeo</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>mnemonic</id>
      <url>https://artifactory.mnemonic.no/artifactory/mnemonic</url>
    </repository>
    <snapshotRepository>
      <id>mnemonic-snapshots</id>
      <url>https://artifactory.mnemonic.no/artifactory/mnemonic-snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven.enforcer.version}</version>
        <executions>
          <execution>
            <id>enforce-build-requirements</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.1.0</version>
                </requireMavenVersion>
                <!-- At least JDK17 is required for building. -->
                <requireJavaVersion>
                  <version>17.0.0</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <release>${jdk.version}</release>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
          <compilerArgs>
            <!-- Needed to get real parameter names during reflection instead of 'argN' (JEP 118). -->
            <arg>-parameters</arg>
            <!-- Needed by picocli-codegen to place generated code inside a unique folder. -->
            <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <!-- Needed to process annotations from the driver's object mapper. -->
              <groupId>com.datastax.oss</groupId>
              <artifactId>java-driver-mapper-processor</artifactId>
              <version>${cassandra.version}</version>
            </path>
            <!-- Needed to get compile time error checking of picocli annotations. -->
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>${picocli.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
        <configuration>
          <includes>
            <!-- Execute all unit tests. -->
            <include>**/*Test.java</include>
            <!-- Execute integration tests by default. -->
            <include>**/*IT.java</include>
          </includes>
          <!-- The following options are needed to be able to execute the integration tests with JDK17.
               It contains the same configuration as init.sh for executing the application. -->
          <argLine>
            --add-modules java.se
            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
            --add-opens java.base/java.lang=ALL-UNNAMED
            --add-opens java.base/java.nio=ALL-UNNAMED
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens java.management/sun.management=ALL-UNNAMED
            --add-opens jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED
            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
            --add-opens java.base/java.util=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.version}</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven.release.version}</version>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <resume>false</resume>
          <pushChanges>false</pushChanges>
          <localCheckout>true</localCheckout>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven.clean.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>${maven.install.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>${maven.deploy.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.resources.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven.javadoc.version}</version>
        <configuration>
          <release>${jdk.version}</release>
          <source>${jdk.version}</source>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven.source.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${maven.license.version}</version>
        <!-- Execute license check during the build process to detect violations as early as possible. -->
        <executions>
          <execution>
            <id>check-licenses</id>
            <phase>compile</phase>
            <goals>
              <goal>add-third-party</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <!-- Execute plugin while building deployment packages. -->
          <acceptPomPackaging>true</acceptPomPackaging>
          <!-- Create THIRD-PARTY file listing all dependencies. -->
          <outputDirectory>${project.build.directory}</outputDirectory>
          <thirdPartyFilename>THIRD-PARTY</thirdPartyFilename>
          <!-- Check transitive dependencies in order to include them in THIRD-PARTY file. -->
          <includeTransitiveDependencies>true</includeTransitiveDependencies>
          <!-- Fail the build if a detected license is not in the white list. -->
          <failIfWarning>true</failIfWarning>
          <!-- Only allow licenses which are in this list (with all the different ways to name them). -->
          <includedLicenses>
            <!-- Apache 2.0 -->
            <includedLicense>ASF 2.0</includedLicense>
            <includedLicense>Apache 2</includedLicense>
            <includedLicense>Apache 2.0</includedLicense>
            <includedLicense>Apache-2.0</includedLicense>
            <includedLicense>Apache License 2.0</includedLicense>
            <includedLicense>Apache License Version 2.0</includedLicense>
            <includedLicense>Apache License, version 2.0</includedLicense>
            <includedLicense>Apache License, Version 2.0</includedLicense>
            <includedLicense>Apache Software License, version 2.0</includedLicense>
            <includedLicense>Apache Software License - Version 2.0</includedLicense>
            <includedLicense>The Apache License, Version 2.0</includedLicense>
            <includedLicense>The Apache Software License, version 2.0</includedLicense>
            <includedLicense>The Apache Software License, Version 2.0</includedLicense>
            <!-- BSD and variants -->
            <includedLicense>BSD</includedLicense>
            <includedLicense>BSD 2-Clause License</includedLicense>
            <includedLicense>BSD-3-Clause</includedLicense>
            <includedLicense>New BSD License</includedLicense>
            <includedLicense>The New BSD License</includedLicense>
            <includedLicense>The BSD License</includedLicense>
            <includedLicense>BSD 3-Clause "New" or "Revised" License (BSD-3-Clause)</includedLicense>
            <includedLicense>EDL 1.0</includedLicense>
            <includedLicense>Eclipse Distribution License - v 1.0</includedLicense>
            <!-- CDDL and dual-licensed CDDL -->
            <includedLicense>CDDL 1.1</includedLicense>
            <includedLicense>CDDL License</includedLicense>
            <includedLicense>Common Development and Distribution License 1.0</includedLicense>
            <includedLicense>Common Development And Distribution License 1.1</includedLicense>
            <includedLicense>Common Development and Distribution License (CDDL) v1.0</includedLicense>
            <includedLicense>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</includedLicense>
            <includedLicense>CDDL+GPL License</includedLicense>
            <includedLicense>CDDL or GPLv2 with exceptions</includedLicense>
            <includedLicense>CDDL + GPLv2 with classpath exception</includedLicense>
            <includedLicense>Dual license consisting of the CDDL v1.1 and GPL v2</includedLicense>
            <!-- Eclipse and variants -->
            <includedLicense>Common Public License - v 1.0</includedLicense>
            <includedLicense>EPL 2.0</includedLicense>
            <includedLicense>EPL-2.0</includedLicense>
            <includedLicense>Eclipse Public License 1.0</includedLicense>
            <includedLicense>Eclipse Public License - Version 1.0</includedLicense>
            <includedLicense>Eclipse Public License - v 2.0</includedLicense>
            <includedLicense>Eclipse Public License v2.0</includedLicense>
            <includedLicense>Eclipse Public License 2.0</includedLicense>
            <!-- MIT and variants-->
            <includedLicense>Bouncy Castle Licence</includedLicense>
            <includedLicense>ISC</includedLicense>
            <includedLicense>MIT license</includedLicense>
            <includedLicense>MIT License</includedLicense>
            <includedLicense>The MIT License</includedLicense>
            <includedLicense>MIT-0</includedLicense>
            <!-- Public domain -->
            <includedLicense>CC0</includedLicense>
            <includedLicense>Public Domain</includedLicense>
            <includedLicense>Public Domain, per Creative Commons CC0</includedLicense>
            <!-- Others -->
            <includedLicense>Indiana University Extreme! Lab Software License</includedLicense>
            <!-- The ElasticSearch client drags in server components, thus, we need to accept the license until the
                 dependencies upon the server components are removed. The client is actually Apache 2 licensed. -->
            <includedLicense>Elastic License 2.0</includedLicense>
          </includedLicenses>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skipSlowTests</id>
      <activation>
        <property>
          <name>skipSlowTests</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven.surefire.version}</version>
            <configuration>
              <excludes>
                <!-- Exclude all integration tests. -->
                <exclude>**/*IT.java</exclude>
                <!-- Exclude all Cassandra tests. -->
                <exclude>no/mnemonic/services/grafeo/dao/cassandra/*</exclude>
                <!-- Exclude all ElasticSearch tests. -->
                <exclude>no/mnemonic/services/grafeo/dao/elastic/*</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
